--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'io.reactivex:rxjava:1.1.0'
     compile 'io.reactivex:rxandroid:1.1.0'
+    compile 'com.google.android.gms:play-services-drive:9.4.0'
+    compile 'com.google.code.gson:gson:2.3'
 }
